--- a/index.html
+++ b/index.html
@@ -1,15 +1,26 @@
 <h1>Melis Alsan</h1>
 <h2>Hakkımda</h2>
-<p>Merhabalar ben Melis 23 yaşındayım.
+<p>Merhabalar ben Melis 23 yaşındayım.<br>
 Bilgisayar Programcılığı mezunuyum.</p>
-<h3>Sevdiğim Tarihi Yerler</h3>
-<h3>Topkapı Sarayı</h3>
-<p>Topkapı Sarayı çok sevdiğim bir tarihi mimari yapıdır.
-Sarayın dört bir yanında farklı yapıların olması göze oldukça hoş geliyor.                
+<strong><em><h3>Sevdiğim Tarihi Yerler</h3></em></strong>
+<ol>
+    <span style="color:green "><li>Topkapı Sarayı</li></span>
+    <span style="color:green"><li>Kız Kulesi</li></span>
+</ol>
+<div>
+<h3>Topkapı Sarayı</h3>  
+<img src="https://muzeler.org/images/google-place-images/topkapi-sarayi-muzesi.jpg" alt="">
+<p>Topkapı Sarayı çok sevdiğim bir tarihi mimari yapıdır.<br>
+Sarayın dört bir yanında farklı yapıların olması göze oldukça hoş geliyor.             
 </p>
+<a href="https://www.millisaraylar.gov.tr/Lokasyon/2/topkapi-sarayi"alt="">Topkapı Sarayı Sitesi</a>
+<hr>
+</div>
 <h3>Kız Kulesi</h3>
-<p>Kule oldukça eski ama tadilattan sonra gitme şansım oldu.
- Kuleye giderken vapura binmek zorundasınız.Epey sıra oluyor ama değiyor.Kule güzel bir restorasyondan geçmiş alt katta küçük bir kafeterya var.Çevresi oldukça güzel.       
+<img src="https://biletdukkanilivestorage.blob.core.windows.net/prod-cms/assets/kiz_kulesi_123aa776e4.webp" alt="">
+<p>Kule oldukça eski ama tadilattan sonra gitme şansım oldu.<br>
+ Kuleye giderken vapura binmek zorundasınız.<br>Epey sıra oluyor ama değiyor.<br>Kule güzel bir restorasyondan geçmiş alt katta küçük bir kafeterya var.<br>Çevresi oldukça güzel.       
 </p>
+<a href="https://kizkulesi.gov.tr/"alt="">Kız Kulesi Sitesi</a>
 <!--açıklama bölümüne ne yazacağımı bilemedim :)-->
 <!--kodlama öğrenmek çok eğlenceli ve bir o kadar da vakit alıcı-->
